# 412

./: .gitignore  README.md
catkin_ws/src/: front_camera.yaml
catkin_ws/src/Lab7/: CMakeLists.txt  course_demo4.world  package.xml
catkin_ws/src/Lab7/launch/: amcl_demo_sim.launch  gmapping.launch  gmapping_demo_sim.launch  logitech.launch
catkin_ws/src/Lab7/map/: map1.pgm  sim_feb26.pgm  sim_feb26.yaml
catkin_ws/src/Lab7/src/: patrol.py
catkin_ws/src/comp2/launch/: comp2.launch  detect.launch
catkin_ws/src/comp2/src/: detect.py  filter.py  follower.py
catkin_ws/src/comp3/launch/: all.launch  amcl_demo_sim.launch  comp3.launch
catkin_ws/src/comp3/src/: comp3.py
catkin_ws/src/comp_1/: CMakeLists.txt  package.xml
catkin_ws/src/comp_1/cfg/: 1classesV3.cfg
catkin_ws/src/comp_1/darknet/src/: compare.c
catkin_ws/src/comp_1/include/comp_1/: yolo_detector.h
catkin_ws/src/comp_1/launch/: follower.launch  multi_turtlebot_wander.launch  multi_turtlebot_wander2.launch  object_follower.launch  wander.launch  yolo_detector.launch
catkin_ws/src/comp_1/launch/comp1/: comp_evader.launch  comp_follower.launch  sim_evader.launch  sim_follower.launch
catkin_ws/src/comp_1/launch/multiple/: 1.launch  2.launch  amcl_wo_map.launch  multiple_turtlebot_world.launch  spawn_turtlebot.launch  view_navigation.launch  view_robots.launch  wander.launch
catkin_ws/src/comp_1/launch/multiple/includes/: move_base_test.launch.xml
catkin_ws/src/comp_1/msg/: Roi.msg  RoiArray.msg
catkin_ws/src/comp_1/params/: yolo.yaml
catkin_ws/src/comp_1/rviz/: view_robots.rviz
catkin_ws/src/comp_1/src/: evader.py  odom_nodev2.py  wander.py  yolo_detector.cpp  yolo_detector_node.cpp
catkin_ws/src/comp_1/src/cuda/: check_cuda  check_cuda.cu
catkin_ws/src/comp_1/src/scripts/: bumper_sm.py  evader.py  object_tracker.py  teleop.py  wander.py  wander_sm.py
catkin_ws/src/demo5/: CMakeLists.txt  package.xml
catkin_ws/src/demo5/cfg/: HSV.cfg
catkin_ws/src/demo5/launch/: 3dsensor.launch  all.launch  amcl_demo_sim.launch  cam_bottom.launch  comp3.launch  demo6.launch  detect.launch  gmapping_demo.launch  marker_track.launch  odom_nav_demo.launch  part1.launch  world.launch
catkin_ws/src/demo5/launch/includes/3dsensor/: asus_xtion_pro.launch.xml
catkin_ws/src/demo5/param/odom_nav_params/: dwa_local_planner_params.yaml
catkin_ws/src/demo5/resources/: course.material  course_comp3.world
catkin_ws/src/demo5/src/: ar_tag.py  comp3.py  demo5.py  demo6.py  demo8-1.py  demo8.py  detect_node.py  fetchbox.py  part1.py  part2.py  patrol.py  pnp_ransac_example.py  test1.py
catkin_ws/src/demo5/src/detect/: detect_lib.py
catkin_ws/src/lab_0/: CMakeLists.txt  demo_1  package.xml  temp.txt
catkin_ws/src/lab_0/launch/: wander.launch
catkin_ws/src/lab_0/src/scripts/: bumper_2.py  bumper_sm.py  odom_nodev2.py
catkin_ws/src/turtlebot_description/urdf/: turtlebot_properties.urdf.xacro
catkin_ws/turtlebot_description/urdf/: turtlebot_properties.urdf.xacro
